# 4tag-Modify

./: .gitignore  CMakeLists.txt
.svn/: wc.db
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
build1/example/: Makefile  cmake_install.cmake
build1/include/AprilTags/: ~$gDetector.h
common/: unionfind.h  workerpool.c
example/: CMakeLists.txt  apriltags_demo.cpp
mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake
mybuild/example/: Makefile  cmake_install.cmake
pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
pod-build/example/: Makefile  cmake_install.cmake
pod-build/include/AprilTags/: TagDetector.h
src/: Edge.cc.autosave  GLine2D.cc  GLine2D.cc.autosave  GLineSegment2D.cc.autosave  Quad.cc  TagDetection.cc  TagDetector.cc  UnionFindSimple.cc.autosave
